<resources>
    <string name="word_confirm">Confirm</string>
    <string name="word_notice_alert">Notifications</string>
    <string name="expand_string">More</string>
    <string name="collapsed_string">Collapse</string>
    <string name="msg_alert_login_join">This is a member-only service.</string>
    <string name="word_login_join">Sing In/Sign Up</string>
    <string name="word_cancel">Cancel</string>
    <string name="word_google_login">Sign in with Google</string>
    <string name="msg_grant_permission_title">Authorization instructions</string>
    <string name="msg_grant_permission_desc">To use BUFLEXZ, please grant the following permissions\nplease grant the following permissions.</string>
    <string name="msg_notification_permission_title">Send Notifications</string>
    <string name="msg_notification_permission_desc">I authorize the notification permission to receive live event news from BUFLEXZ.</string>
    <string name="msg_disconnected_network">I am not connected to the network.</string>
    <string name="msg_check_network_status">Please check your network\nconnection status and try again.</string>
    <string name="server_error_default">We apologize for the inconvenience.\nPlease try again later.</string>
    <string name="msg_grant_permission">Approving permissions</string>
    <string name="msg_alert_notification_permission_denied">You have declined the permission to send notifications.\nTo grant the permission\n[Settings] > [Applications] > [BUFLEXZ] > [Notifications].\nto allow notifications.</string>
    <string name="msg_server_checking">The server is being checked.\nPlease try again later.</string>
    <string name="msg_minor_update">A new version has been updated.\nDo you want to update?</string>
    <string name="word_update">Update</string>
    <string name="msg_major_update">BUFLEXZ service\nnew features have been added.\nPlease proceed with the update.</string>
    <string name="word_join">Sign up</string>
    <string name="html_join_nation_title"><![CDATA[Select country<font color=#48b778>*</font>]]></string>
    <string name="html_join_nickname_title"><![CDATA[Nickname<font color=#48b778>*</font>]]></string>
    <string name="html_join_email_title"><![CDATA[Email<font color=#48b778>*</font>]]></string>
    <string name="msg_input_nickname">Please enter a nickname.</string>
    <string name="msg_input_change_nickname">Please enter the nickname you\'d like to change.</string>
    <string name="msg_input_email">Please enter your email.</string>
    <string name="msg_select_birthday">Please select your date of birth.</string>
    <string name="msg_input_recommend_key">Please enter a referral code (optional)</string>
    <string name="html_join_recommend_key_desc"><![CDATA[Enter your referral code to receive <font color=#ff5e5e><b>%1$sP</b></font> Earn]]></string>
    <string name="word_duple_check">Duplicate check</string>
    <string name="word_recommend_key">Referral code</string>
    <string name="word_my_recommend_key">My referral code</string>
    <string name="msg_invite_receive_benefit">Invite and get benefits</string>
    <string name="word_total_agree">All agree</string>
    <string name="word_view_contents">View content</string>
    <string name="word_complete">Complete</string>
    <string name="word_select">Select</string>
    <string name="msg_usable_nickname">Available nickname.</string>
    <string name="msg_input_email_id">Please enter your email address.</string>
    <string name="format_msg_input_over">Please enter at least %1$d characters.</string>
    <string name="msg_duplicate_nickname">Nickname is already in use.</string>
    <string name="msg_check_duplicate_nickname">Please check for duplicate nicknames.</string>
    <string name="msg_select_nation">Please select a country.</string>
    <string name="msg_agree_terms">Please agree to the terms and conditions.</string>
    <string name="msg_failed_join">Failed to register.</string>
    <string name="word_this_week_win_price">This week\'s prizes</string>
    <string name="msg_lotto_guide">What is CONTEST?</string>
    <string name="word_daily_bonus">Daily Bonus</string>
    <string name="word_join_history">Participation History</string>
    <string name="word_win_history">Winners</string>
    <string name="word_winner">Winners</string>
    <string name="word_use_method">How to play</string>
    <string name="format_lottery_round">%1$sround</string>
    <string name="msg_lotto_announce_date">Drawing to be held on</string>
    <string name="msg_lotto_announce_date_format">MM, DD, yyyy</string>
    <string name="msg_quit">Press the [Back] button one more time to exit.</string>
    <string name="msg_make_buff_wallet">Create a buff wallet</string>
    <string name="word_point">Points</string>
    <string name="msg_point_desc">You can earn points by winning the Points CONTEST.\nYou can convert your points into Lucky Balls.\nPoints can be redeemed for items in the merchandise shop.\nPoints can be redeemed for candy.\nPoints can be converted into buffCoins.\nPoints can be converted into Lucky Balls.</string>
    <string name="word_retention_point">Points</string>
    <string name="word_retention_ball">Lucky Balls</string>
    <string name="word_retention_candy">Candy held</string>
    <string name="word_luckyball">Lucky Balls</string>
    <string name="word_luckyball_q">Lucky Balls?</string>
    <string name="word_luckyball_earned_method">How to earn Lucky Balls</string>
    <string name="msg_luckyball_desc">A Lucky Ball is an entry ticket to a prize of your choice on Lucky Draw.\nLucky Balls can be earned by converting points or buffs.</string>
    <string name="word_gift_shop">Gift Shop</string>
    <string name="word_gift_card">Gift Cards</string>
    <string name="word_goods_shop">Merchandise Shop</string>
    <string name="word_exchange_candy">Convert to Candy</string>
    <string name="word_exchange_buff_coin">Convert to buffCoin</string>
    <string name="word_exchange_buff">Switch to buff</string>
    <string name="word_exchange_point">Switch to Points</string>
    <string name="word_exchange_luckyball">Switch to Lucky Ball</string>
    <string name="msg_exchange_luckyball">Conversion to Lucky Balls</string>
    <string name="msg_exchange_luckyball_desc">You can convert Points to Lucky Balls</string>
    <string name="word_exchange_luckyball_amount">Amount of Lucky Balls to convert</string>
    <string name="msg_input_exchange_luckyball_amount">Please enter the number of Lucky Balls you want to convert.</string>
    <string name="html_exchange_luckyball_maximum"><![CDATA[Maximum amount of Lucky Balls you can exchange <font color=#ff5e5e><b>%1$s</b></font>]]></string>
    <string name="msg_join">Submit</string>
    <string name="word_etc">Other</string>
    <string name="word_gift_shop_history">Gift Shop Purchases</string>
    <string name="word_goods_shop_history">Shop Purchases</string>
    <string name="word_invite_friend">Invite a friend</string>
    <string name="word_invite">Invite</string>
    <string name="word_invite_friend_event">Invite a Friend Event</string>
    <string name="msg_invite_friend_event_desc">This is an event to select a winner\nKorean official Lottery winning numbers.</string>
    <string name="msg_invite_gift_desc1">For every 1 person invited</string>
    <string name="msg_invite_gift_desc2">500 CONTEST tickets</string>
    <string name="msg_invite_gift_desc3">For every 5 invitees</string>
    <string name="msg_invite_gift_desc4">1 lucky ball each</string>
    <string name="msg_inquiry">Contact us</string>
    <string name="word_inquiry_history">Contact Us</string>
    <string name="word_notice">Announcements</string>
    <string name="word_setting">Settings</string>
    <string name="format_joinable_remain_minute">You have %1$s minutes and %2$s seconds left to participate.</string>
    <string name="format_joinable_remain_seconds">%1$s seconds left to enter.</string>
    <string name="msg_minute_join_desc">The more you participate, the more chances you have to win.</string>
    <string name="msg_lottery_join_progress">Entering the CONTEST.</string>
    <string name="msg_lotto_join_complete">Your CONTEST entry is complete.</string>
    <string name="format_input_number">Please enter the number below to prevent macros.\nPlease enter the number %1$s</string>
    <string name="msg_invalid_number">The numbers don\'t match.</string>
    <string name="format_ball_unit">%1$s ea</string>
    <string name="msg_over_enable_exchange_ball">You have exceeded the number of redeemable Lucky Balls.</string>
    <string name="msg_completed_exchange_ball">Lucky Ball redemption is complete.</string>
    <string name="msg_lack_point">Insufficient points.</string>
    <string name="msg_lack_ball">You\'re out of Lucky Balls.</string>
    <string name="msg_alert_exchange_luckyball_title">Want to convert to Lucky Balls?</string>
    <string name="msg_alert_exchange_luckyball_desc">Lucky Balls that have been converted\ncannot be converted back to points.</string>
    <string name="msg_exchange">Convert</string>
    <string name="word_exchange_luckyball_complete">Lucky Ball conversion complete</string>
    <string name="msg_exchange_luckyball_complete_desc">You can see your converted candy in [My] > [Lucky Balls].</string>
    <string name="word_minus_point">Points deducted</string>
    <string name="word_exchanged_luckyball">Conversion Lucky Ball</string>
    <string name="msg_buff_coin_desc">buff is the exclusive coin of BUFLEXZ based on the blockchain.\nbuff can be converted into Candy.\nbuff can be converted into Lucky Balls.</string>
    <string name="msg_do_not_show_again">Don\'t look again</string>
    <string name="word_close">Close</string>
    <string name="word_lottery_join_date">Entry Date</string>
    <string name="format_lotto_my_join_count_title">Number of entries in round %1$s</string>
    <string name="format_lotto_my_join_count">NO. %1$s</string>
    <string name="msg_not_exist_lottery_join_list">I have no entries.</string>
    <string name="format_lotto_win_number">%1$sth CONTEST Drawing Number</string>
    <string name="word_win_status2">Winning Status</string>
    <string name="word_grade">Number</string>
    <string name="word_total_win_prize">Total Winnings</string>
    <string name="word_win_prize_per_person">Prize per person</string>
    <string name="word_winner_count">Number of Winners</string>
    <string name="format_count_unit6">%1$s tickets</string>
    <string name="format_count_unit4">%1$s people</string>
    <string name="word_email">Email</string>
    <string name="word_resend_email">Resend emails</string>
    <string name="word_select_photo">Select a photo</string>
    <string name="msg_send_auth_email">Send verification email</string>
    <string name="msg_input_auth_number">Please enter your verification number.</string>
    <string name="msg_input_auth_number_desc">Please enter the verification number found in the email within 24 hours.</string>
    <string name="word_auth_number">Verification number</string>
    <string name="msg_input_6number">Please enter 6 digits.</string>
    <string name="msg_not_receive_email">Didn\'t receive a verification email?</string>
    <string name="msg_not_receive_email2">If you don\'t receive an email</string>
    <string name="msg_not_receive_reason">•Make sure the email address you entered is correct.\n•Check your spam folder.\n•Clean up your mailbox.</string>
    <string name="word_warning">WARNING</string>
    <string name="msg_join_email_desc">An email will be sent to the email you entered to notify you of your prize, please enter a valid email address.</string>
    <string name="msg_make_buff_wallet_desc1">To create a wallet\nEmail authentication is required the first time.</string>
    <string name="msg_make_buff_wallet_desc2">Buff is a blockchain-based coin exclusive to BUFLEXZ.\nCreate a buff wallet and receive various benefits.</string>
</resources>