<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apps.my.ui.WithdrawalAuthConfirmFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/width_44"
        android:paddingEnd="@dimen/width_44">

        <TextView
            android:id="@+id/text_withdrawal_auth_confirm_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_47"
            android:background="@drawable/bg_222222_radius_185"
            android:paddingStart="@dimen/width_22"
            android:paddingTop="@dimen/height_16"
            android:paddingEnd="@dimen/width_22"
            android:paddingBottom="@dimen/height_16"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_102"
            android:text="@string/msg_input_auth_number"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_66pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_36"
            android:text="@string/msg_input_auth_number_desc"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_38pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_133"
            android:text="@string/word_auth_number"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_33pt" />

        <EditText
            android:id="@+id/edit_withdrawal_auth_confirm_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_130"
            android:layout_marginTop="@dimen/height_32"
            android:background="@drawable/bg_232323_radius_33"
            android:gravity="center_vertical"
            android:hint="@string/msg_input_6number"
            android:inputType="number"
            android:maxLength="6"
            android:orientation="horizontal"
            android:paddingStart="@dimen/width_30"
            android:paddingEnd="@dimen/width_30"
            android:textColor="@color/white"
            android:textColorHint="@color/color_878787"
            android:textSize="@dimen/textSize_38pt" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_38">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/msg_not_receive_email"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_38pt" />

            <TextView
                android:id="@+id/text_withdrawal_auth_confirm_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/underbar_ffffff_1b1b1b"
                android:text="@string/word_resend_email"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_38pt"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_withdrawal_auth_conirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_135"
            android:layout_marginTop="@dimen/height_69"
            android:layout_marginBottom="@dimen/height_250"
            android:background="@drawable/bg_595959_radius_30"
            android:gravity="center"
            android:text="@string/word_complete"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_44pt"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/width_44"
        android:layout_marginEnd="@dimen/width_44"
        android:layout_marginBottom="@dimen/height_85"
        android:background="@drawable/bg_232323_radius_55"
        android:orientation="vertical"
        android:paddingStart="@dimen/width_50"
        android:paddingTop="@dimen/height_44"
        android:paddingEnd="@dimen/width_50"
        android:paddingBottom="@dimen/height_44">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_not_receive_email2"
            android:textColor="@color/color_dcdcdc"
            android:textSize="@dimen/textSize_33pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_27"
            android:text="@string/msg_not_receive_reason"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_38pt" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>