<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apps.my.ui.WithdrawalAuthConfirmFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/width_44"
        android:paddingEnd="@dimen/width_44">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_102"
            android:text="@string/msg_make_buff_wallet_desc1"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_66pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_36"
            android:text="@string/msg_make_buff_wallet_desc2"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_38pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_133"
            android:text="@string/word_email"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_33pt" />

        <EditText
            android:id="@+id/edit_wallet_make_auth_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_130"
            android:layout_marginTop="@dimen/height_32"
            android:background="@drawable/bg_232323_radius_33"
            android:gravity="center_vertical"
            android:hint="@string/msg_input_email"
            android:inputType="textEmailAddress"
            android:orientation="horizontal"
            android:paddingStart="@dimen/width_30"
            android:paddingEnd="@dimen/width_30"
            android:textColor="@color/white"
            android:textColorHint="@color/color_878787"
            android:textSize="@dimen/textSize_38pt" />


        <TextView
            android:id="@+id/text_wallet_make_auth"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_135"
            android:layout_marginTop="@dimen/height_69"
            android:layout_marginBottom="@dimen/height_250"
            android:background="@drawable/bg_595959_radius_30"
            android:gravity="center"
            android:text="@string/msg_send_auth_email"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_44pt"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>