<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:paddingStart="@dimen/width_44"
            android:paddingEnd="@dimen/width_44">

            <TextView
                android:id="@+id/text_galleryv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/word_cancel"
                android:textColor="@color/color_878787"
                android:textSize="@dimen/textSize_48pt"/>

            <TextView
                android:id="@+id/text_gallery_only_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/word_complete"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_52pt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/word_select_photo"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_48pt" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_2"
            android:background="@color/color_ebebeb"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_only_gallery"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/height_20"
            android:layout_weight="1"/>


    </LinearLayout>


</RelativeLayout>
